--- a/css/styles.css
+++ b/css/styles.css
@@ -28,11 +28,12 @@ body {
     flex-direction: column;
 }
 
+
 footer {
     background-color:#D4563D !important;
     font-family: Medium;
     width: 100%;
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
 }
@@ -50,8 +51,6 @@ footer {
 #cards {
     padding-top: 40px;
 }
-
-
 
 .name {
     font-family: Bold;
